--- a/src/renderer/src/components/InputField.css
+++ b/src/renderer/src/components/InputField.css
@@ -5,7 +5,7 @@
   display: flex;
   align-items: center;
   width: 100%;
-  max-width: 320px;
+  /* max-width: 320px; */
   margin: 0 auto;
   background-color: white;
   border: 1px solid #e5e7eb;
