--- a/src/renderer/src/components/Sidebar.css
+++ b/src/renderer/src/components/Sidebar.css
@@ -88,8 +88,9 @@ body {
   color: var(--primary-color);
   text-decoration: none;
   gap: 10px;
-  width: 250px;
+  width: 200px;
   transition: all 0.3s ease;
+  margin-left: 10px;
 }
 
 .sidebar-nav a:hover,
