--- a/src/renderer/src/pages/Books.css
+++ b/src/renderer/src/pages/Books.css
@@ -431,17 +431,24 @@
   height: 60vh;
   text-align: center;
   vertical-align: middle;
+  background-color: rgba(255, 255, 255, 0.9);
 }
 
-.spinner {
-  width: 30px;
-  height: 30px;
-  border: 3px solid #f3f3f3;
-  border-top: 3px solid #3498db;
+.table-spinner {
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  border: 4px solid #f3f3f3;
+  border-top: 4px solid #0f172a;
   border-radius: 50%;
   animation: spin 1s linear infinite;
-  margin: 0 auto;
-  display: inline-block;
+}
+
+.table-loading-text {
+  display: block;
+  margin-top: 1rem;
+  color: #64748b;
+  font-size: 0.875rem;
 }
 
 @keyframes spin {
